2006-10-12  Andrew Cagney  <cagney@redhat.com>

	* funit.java: Emacs indent.
	
	* funit.java: Move 32- and 64- logic to frysk.junit.Runner.

2006-10-11  Andrew Cagney  <cagney@redhat.com>

	* funit.java: Set the frysk.junit.Patsh data path to PKGDATADIR.

2006-10-11  Yao Qi  <qiyaoltc@cn.ibm.com>

	* funit-ppc64-regs.S (main): Conditional compile to avoid breaking
	build on platforms other than powerpc.

2006-10-10  Yao Qi  <qiyaoltc@cn.ibm.com>

	* funit-ppc64-regs.S: Add 32-bit asm code.

2006-10-09  Yao Qi  <qiyaoltc@cn.ibm.com>

	* funit-breakpoints.c (dummy): Generate trap event for
	powerpc32 as well.

2006-10-05  Mark Wielaard  <mark@klomp.org>

	* funit-breakpoints.c (trap_handler): New function.
	(dummy): Send trap signal and generate trap event.
	(main): Install trap signal handler.

2006-09-29  Mark Wielaard  <mark@klomp.org>

	* funit-breakpoints.c (main): Reexec at the end of the loop.

2006-09-25  Yong Zheng  <zhengyo@cn.ibm.com>

	* funit-ppc64-modify.S: New PPC64 specific test program.
	* funit-x8664-modify.S: Correct the syscall number on X8664 
	and do some modifications to keep synch with TestRegMemModify.
	
2006-09-25  Yong Zheng  <zhengyo@cn.ibm.com>

	* funit.java: Refactor to suport arch32 test.
	* funit.xml: Update the --arch option info.

2006-09-21	Mike Cvet	<mcvet@redhat.com>
	
	* funit-rt-threader.c (signal_parent): loops instead of 
	exiting.

2006-09-20	Mike Cvet	<mcvet@redhat.com>
	
	* funit-rt-looper.c: Threw in a little entropy.
	* funit-rt-threader.c: Added - will be used for threaded
	stack trace tests.

2006-09-18  Mark Wielaard  <mark@klomp.org>

	* funit-syscall-running.c: Don't read, just accept socket.

2006-09-07  Mark Wielaard  <mark@klomp.org>

	* funit-syscall-signal.c: New test prog.

2006-09-04  Mark Wielaard  <mark@klomp.org>

	* funit-syscall-running.c: Accept socket and read() for it.

2006-09-01  Mark Wielaard  <mark@klomp.org>

	* funit-syscall-running.c: New test prog.

2006-08-29  Yong Zheng  <zhengyo@cn.ibm.com>